web-infras/parser/tests/fixtures/babel/es2015/uncategorised/388/output.txt
[SyntaxError]: 'import' and 'export' may appear only with 'sourceType: "module"' (1,1)
1|export function() {};
 |^
[SyntaxError]: function statement requires a name (1,16)
1|export function() {};
 |              ^
